Setup publishDirectory – only publish the contents of dist to NPM

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "directory": "./dist"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development node ./bin/build.js",
     "build": "cross-env NODE_ENV=production node ./bin/build.js",
