--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "@finsweet/developer-starter",
+  "name": "@jankocian/fs-developer-starter",
   "version": "0.0.0",
-  "description": "Developer starter template for Finsweet projects.",
-  "homepage": "https://github.com/finsweet/developer-starter#readme",
+  "description": "Improved Webflow developer starter template originally from Finsweet.",
+  "homepage": "https://github.com/jankocian/fs-developer-starter#readme",
   "license": "ISC",
   "keywords": [],
   "author": {
-    "name": "Finsweet",
-    "url": "https://finsweet.com/"
+    "name": "Jan Kocián",
+    "url": "https://jankocian.com/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/finsweet/developer-starter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/finsweet/developer-starter/issues"
+    "url": "git+https://github.com/jankocian/fs-developer-starter.git"
   },
   "type": "module",
   "main": "src/index.ts",
